--- a/XenToolsGui/XenToolsGui/MainWindow.xaml
+++ b/XenToolsGui/XenToolsGui/MainWindow.xaml
@@ -1,8 +1,90 @@
 ﻿<Window x:Class="XenToolsGui.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:dg="http://schemas.microsoft.com/wpf/2008/toolkit"
+        xmlns:TileViewer="clr-namespace:XenToolsGui.TileViewer.Types"
+        Title="Xen Tools Gui" Height="800" Width="600" WindowStartupLocation="CenterScreen" WindowState="Maximized" WindowStyle="ToolWindow">
+    <Window.Resources>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="25*" />
+            <RowDefinition Height="42*" />
+            <RowDefinition Height="694*" />
+        </Grid.RowDefinitions>
+        <Menu Name="menu">
+            <MenuItem Name="File" Header="File">
+                <MenuItem Name="FileItemSelectOptions" Header="Options" Click="FileItemSelectOptions_Click"></MenuItem>
+                <MenuItem Name="FileItemLoadFile" Header="Load TileFiles"/>
+                <MenuItem Name="FileItemSaveFile" Header="Save TileFiles"/>
+                <MenuItem Name="FileSelectScriptFolder" Header="Select Script Folder"/>
+            </MenuItem>
+        </Menu>
+        <TabControl Name="tabControl1" Grid.Row="2">
+            <TabItem Header="Tile Data Viewer" Name="TabItemDataViewer">
+                <Grid >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="170*" />
+                        <RowDefinition Height="83" />
+                        <RowDefinition Height="170*" />
+                        <RowDefinition Height="35" />
+                        <RowDefinition Height="68*" />
+                        <RowDefinition Height="131*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="7" />
+                        <ColumnDefinition Width="235*" />
+                        <ColumnDefinition Width="115" />
+                        <ColumnDefinition Width="205*" />
+                        <ColumnDefinition Width="6" />
+                    </Grid.ColumnDefinitions>
+                    <TileViewer:SuperGridTree x:Name="SuperGridTiles" Grid.Column="1" Grid.RowSpan="6" />
+                    <TileViewer:SuperGridTree x:Name="SuperGridLosedTiles" Grid.Column="3" DataContext="{Binding}" Grid.RowSpan="6" />
+                    <DockPanel Grid.Column="2" Grid.Row="5" Name="dockPanel1" Grid.RowSpan="2">
+                        <Button Content="Add Tiles" Height="23" Name="ButtonAddTiles" Width="75" DockPanel.Dock="Top" Click="AddTiles_Click_1" />
+                        <Button Content="Add Styles" Height="23" Name="ButtonAddStyles" Width="75" DockPanel.Dock="Top" />
+                        <Button Content="To Tiles Tmp" Height="23" Name="button1" Width="75" DockPanel.Dock="Top" FontSize="10" />
+                        <Button Content="To Styles Tmp" Height="23" Name="button2" Width="75" DockPanel.Dock="Top" FontSize="10" />
+                    </DockPanel>
+                    <DockPanel Grid.Column="2" Grid.Row="3" Name="dockPanel2">
+                        <TextBlock Height="23" Name="textBlock2" Text="Right Datas---&gt;" DataContext="{Binding}" TextAlignment="Right" DockPanel.Dock="Top" />
+                        <Button Content="Walls" Height="23" Name="buttonWallsRight" Width="75" Click="buttonWallsRight_Click" DockPanel.Dock="Top" />
+                        <Button Content="Roofs" Height="23" Name="ButtonRoofsRight" Width="75" Click="ButtonRoofsRight_Click" DockPanel.Dock="Top" />
+                        <Button Content="Floats" Height="23" Name="buttonFloatsRight" Width="75" Click="buttonFloatsRight_Click" DockPanel.Dock="Top" />
+                        <Button Content="Misc" Height="23" Name="buttonMiscRight" Width="75" Click="buttonMiscRight_Click" DockPanel.Dock="Top" />
+                        <Button Content="Token" Height="23" Name="button6" Width="75" Click="button6_Click" DockPanel.Dock="Top" />
+                    </DockPanel>
+                    <DockPanel Grid.Column="2" Grid.Row="1" Name="dockPanel3">
+                        <TextBlock Height="23" Name="textBlock1" Text="&lt;-- Left Datas" TextAlignment="Left" DataContext="{Binding}" DockPanel.Dock="Top" />
+                        <Button Content="Walls" Height="23" Name="ButtonWallLeft" Width="75" Click="button1_Click" DockPanel.Dock="Top" />
+                        <Button Content="Roofs" Name="buttonRoofLeft" Width="75" Click="buttonRoof_Click" DockPanel.Dock="Top" />
+                        <Button Height="23" Name="ButtonFloatsLeft" Width="75" Content="Floats" Click="ButtonFloats_Click" DockPanel.Dock="Top" />
+                        <Button Content="Misc" Height="23" Name="buttonMiscLeft" Width="75" Click="buttonMisc_Click" DockPanel.Dock="Top" />
+                        <Button Content="Token" Height="23" Name="buttonTokenLeft" Width="75" Click="buttonTokenLeft_Click" DockPanel.Dock="Top" />
+                    </DockPanel>
+                    <DataGrid AutoGenerateColumns="False" Grid.Column="1" Grid.Row="6" Name="dataTmpStyles" CanUserResizeColumns="False">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Binding="{Binding Index}" CanUserResize="False" Header="Index" />
+                            <DataGridTextColumn CanUserResize="False" Header="Name" Binding="{Binding Name}"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <DataGrid AutoGenerateColumns="False" Grid.Column="3" Grid.Row="6" Name="dataGridTmpTiles" CanUserResizeColumns="False">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
+                            <DataGridTemplateColumn>
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <StackPanel>
+                                            <Image Width="Auto" Height="Auto" Stretch="None" Source="{Binding Id,Converter={StaticResource BitmapItemConverter}}"/>
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
