--- a/XenToolsGui/XenToolsGui/MainWindow.xaml
+++ b/XenToolsGui/XenToolsGui/MainWindow.xaml
@@ -15,8 +15,8 @@
         <Menu Name="menu">
             <MenuItem Name="File" Header="File">
                 <MenuItem Name="FileItemSelectOptions" Header="Options" Click="FileItemSelectOptions_Click"></MenuItem>
-                <MenuItem Name="FileItemLoadFile" Header="Load TileFiles"/>
-                <MenuItem Name="FileItemSaveFile" Header="Save TileFiles"/>
+                <MenuItem Name="FileItemLoadFile" Header="Load TileFiles" Click="buttonLoadTileData_Click"/>
+                <MenuItem Name="FileItemSaveFile" Header="Save TileFiles" Click="buttonSaveTileData_Click"/>
                 <MenuItem Name="FileSelectScriptFolder" Header="Select Script Folder"/>
             </MenuItem>
         </Menu>
@@ -41,12 +41,6 @@
                     </Grid.ColumnDefinitions>
                     <TileViewer:SuperGridTree x:Name="SuperGridTiles" Grid.Column="1" Grid.RowSpan="6" />
                     <TileViewer:SuperGridTree x:Name="SuperGridLosedTiles" Grid.Column="3" DataContext="{Binding}" Grid.RowSpan="6" />
-                    <DockPanel Grid.Column="2" Grid.Row="5" Name="dockPanel1" Grid.RowSpan="2">
-                        <Button Content="Add Tiles" Height="23" Name="ButtonAddTiles" Width="75" DockPanel.Dock="Top" Click="AddTiles_Click_1" />
-                        <Button Content="Add Styles" Height="23" Name="ButtonAddStyles" Width="75" DockPanel.Dock="Top" />
-                        <Button Content="To Tiles Tmp" Height="23" Name="button1" Width="75" DockPanel.Dock="Top" FontSize="10" />
-                        <Button Content="To Styles Tmp" Height="23" Name="button2" Width="75" DockPanel.Dock="Top" FontSize="10" />
-                    </DockPanel>
                     <DockPanel Grid.Column="2" Grid.Row="3" Name="dockPanel2">
                         <TextBlock Height="23" Name="textBlock2" Text="Right Datas---&gt;" DataContext="{Binding}" TextAlignment="Right" DockPanel.Dock="Top" />
                         <Button Content="Walls" Height="23" Name="buttonWallsRight" Width="75" Click="buttonWallsRight_Click" DockPanel.Dock="Top" />
@@ -63,13 +57,13 @@
                         <Button Content="Misc" Height="23" Name="buttonMiscLeft" Width="75" Click="buttonMisc_Click" DockPanel.Dock="Top" />
                         <Button Content="Token" Height="23" Name="buttonTokenLeft" Width="75" Click="buttonTokenLeft_Click" DockPanel.Dock="Top" />
                     </DockPanel>
-                    <DataGrid AutoGenerateColumns="False" Grid.Column="1" Grid.Row="6" Name="dataTmpStyles" CanUserResizeColumns="False">
+                    <DataGrid AutoGenerateColumns="False" Grid.Column="1" Grid.Row="6" Name="dataGridTmpStyles" CanUserResizeColumns="False">
                         <DataGrid.Columns>
                             <DataGridTextColumn Binding="{Binding Index}" CanUserResize="False" Header="Index" />
                             <DataGridTextColumn CanUserResize="False" Header="Name" Binding="{Binding Name}"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <DataGrid AutoGenerateColumns="False" Grid.Column="3" Grid.Row="6" Name="dataGridTmpTiles" CanUserResizeColumns="False">
+                    <DataGrid AutoGenerateColumns="False" Grid.Column="3" Grid.Row="6" Name="dataGridTmpTiles" CanUserResizeColumns="False" Grid.ColumnSpan="2" Margin="6,5,0,-5">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
                             <DataGridTemplateColumn>
@@ -83,8 +77,30 @@
                             </DataGridTemplateColumn>
                         </DataGrid.Columns>
                     </DataGrid>
+                    <StackPanel Grid.Column="2" Grid.Row="6" Name="stackPanel1">
+                        <Button Content="To Tiles Tmp" Height="23" Name="button1" Width="75" FontSize="10" Click="AddTileTmpClick" />
+                        <Button Content="To Styles Tmp" Height="23" Name="button2" Width="75" FontSize="10" Click="button2_Click" />
+                        <Button Content="Add Tiles" Height="23" Name="ButtonAddTiles" Width="75" Click="AddTiles_Click_1" />
+                        <Button Content="Add Styles" Height="23" Name="ButtonAddStyles" Width="75" Click="ButtonAddStyles_Click" />
+                    </StackPanel>
+                </Grid>
+            </TabItem>
+            <TabItem Name="TabItemMapMaking" Header="Map Maker">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="63*" />
+                        <RowDefinition Height="599*" />
+                    </Grid.RowDefinitions>
+                    <TabControl Name="tabControl2" Grid.Row="1">
+                        <TabItem Header="tabItem1" Name="tabItem1">
+                            <Grid />
+                        </TabItem>
+                    </TabControl>
                 </Grid>
             </TabItem>
         </TabControl>
+        <StackPanel Grid.Row="2" Height="100" HorizontalAlignment="Left" Margin="749,391,0,0" Name="stackPanel2" VerticalAlignment="Top" Width="200" />
+        <Button Content="Button" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="498,6,0,0" Name="button5" VerticalAlignment="Top" Width="75" />
+        <Button Content="Button" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="417,6,0,0" Name="button7" VerticalAlignment="Top" Width="75" />
     </Grid>
 </Window>
