--- a/XenToolsGui/XenToolsGui/OptionWindow.xaml
+++ b/XenToolsGui/XenToolsGui/OptionWindow.xaml
@@ -10,5 +10,7 @@
         <Button Content="Apply" Height="23" HorizontalAlignment="Left" Margin="191,238,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
         <Button Content="Browse Folder" Height="23" HorizontalAlignment="Left" Margin="181,38,0,0" Name="buttonInstallFolder" VerticalAlignment="Top" Width="85" Click="buttonInstallFolder_Click" />
         <Button Content="Browse Folder" Height="23" HorizontalAlignment="Left" Margin="181,96,0,0" Name="buttonSaveFolder" VerticalAlignment="Top" Width="85" Click="buttonSaveFolder_Click" />
+        <Button Content="Save Options" Height="23" HorizontalAlignment="Left" Margin="12,238,0,0" Name="button2" VerticalAlignment="Top" Width="86" Click="button2_Click" />
+        <Button Content="Load Options" HorizontalAlignment="Left" Margin="12,209,0,29" Name="button3" Width="86" Click="button3_Click" />
     </Grid>
 </Window>
