--- a/XenToolsGui/XenToolsGui/MainWindow.xaml
+++ b/XenToolsGui/XenToolsGui/MainWindow.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="XenToolsGui.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:dg="http://schemas.microsoft.com/wpf/2008/toolkit"
         xmlns:TileViewer="clr-namespace:XenToolsGui.TileViewer.Types"
         Title="Xen Tools Gui" Height="800" Width="600" WindowStartupLocation="CenterScreen" WindowState="Maximized" WindowStyle="ToolWindow">
     <Window.Resources>
@@ -91,11 +90,31 @@
                         <RowDefinition Height="63*" />
                         <RowDefinition Height="599*" />
                     </Grid.RowDefinitions>
-                    <TabControl Name="tabControl2" Grid.Row="1">
-                        <TabItem Header="tabItem1" Name="tabItem1">
-                            <Grid />
+                    <TabControl Name="TabControlMakeMapData" Grid.Row="1" Height="Auto" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <TabItem Header="Color Areas" Name="TabItemColorArea">
+                            <Grid>
+                                <DockPanel Name="DocPanelDataGridAreaColor" >
+                                    <Expander DockPanel.Dock="Top">
+                                        <DataGrid DockPanel.Dock="Top" ItemsSource="{Binding Path=ColorArea.List}" CanUserResizeColumns="False">
+                                            <DataGrid.Columns>
+                                                <DataGridTemplateColumn Header="Color">
+                                                    <DataGridTemplateColumn.CellTemplate>
+                                                        <DataTemplate>
+                                                            <StackPanel>
+                                                                <Rectangle Height="40" Width="40" Fill="{Binding Path=Color, Converter={StaticResource ColorConverter}}"/>
+                                                            </StackPanel>
+                                                        </DataTemplate>
+                                                    </DataGridTemplateColumn.CellTemplate>
+                                                </DataGridTemplateColumn>
+                                            </DataGrid.Columns>
+                                        </DataGrid>
+                                    </Expander>
+                                </DockPanel>
+                            </Grid>
                         </TabItem>
                     </TabControl>
+                    <Button Content="Load Script" Height="23" HorizontalAlignment="Left" Margin="6,6,0,0" Name="ButtonLoadScript" VerticalAlignment="Top" Width="75" Click="ButtonLoadScript_Click" />
+                    <Button Content="Save Scripts" Height="23" HorizontalAlignment="Left" Margin="87,6,0,0" Name="ButtonSaveScript" VerticalAlignment="Top" Width="75" />
                 </Grid>
             </TabItem>
         </TabControl>
